--- a/AlumiManagementSystem/WebContent/css/admin/shadeBlock.css
+++ b/AlumiManagementSystem/WebContent/css/admin/shadeBlock.css
@@ -105,3 +105,120 @@ body {
 .shadeHRLContent {
 	
 }
+
+.contactsWindow{
+    position: absolute;
+    top: 70px;
+    background: #ffffff;
+    border: 1px solid #AAC6EE;
+    width: 500px;
+    display: none;
+    min-height: 300px;
+    z-index: 100;
+}
+
+.contactsWindow table{
+	width: 100%;
+	margin-top: 20px;
+}
+
+.widowTitle{
+    width: 90%;
+    text-align: center;
+    border-bottom: 1px solid #AAC6EE;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0 auto;
+}
+
+.widowTitle span{
+	font-size: 16px;
+}
+
+.contactsWindow table tr{
+	height: 40px;
+}
+
+.contactsWindow table tr th{
+	width: 35%;
+}
+
+.contactsWindow table tr td input{
+    border: 1px solid #AAC6EE;
+    width: 200px;
+}
+
+.contactsBtn{
+	width: 100%;
+	height: auto;
+	margin: 30px auto;
+	float: left;
+	text-align: center;
+}
+
+.addBtn{
+    width: 60px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    background: url(/AlumiManagementSystem/images/admin/tabletop.gif) repeat-x;
+    cursor: pointer;
+    float: left;
+    margin-right: 10px;
+    margin-left: 186px;
+}
+
+.editBtn{
+    width: 60px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    background: url(/AlumiManagementSystem/images/admin/tabletop.gif) repeat-x;
+    cursor: pointer;
+    float: left;
+    margin-right: 10px;
+    margin-left: 186px;
+    display: none;
+}
+
+.resetBtn{
+	width: 60px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    background: url(/AlumiManagementSystem/images/admin/tabletop.gif) repeat-x;
+    cursor: pointer;
+    float: left;
+}
+
+.close{
+    float: right;
+    cursor: pointer;
+}
+
+.overbg{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 99;
+    opacity: 0.5;
+    background: #AAC6EE;
+	display: none;
+}
+
+.errorTips{
+	display: none;
+	color:red;
+}
+
+.table_bordre{
+    height: 70px;
+    width: 99.4%;
+    margin: 0 auto;
+    background: url(/AlumiManagementSystem/images/admin/optiontop.gif) repeat-x;
+}
+
+.table_bordre span{
+    line-height: 70px;
+    font-size: 18px;
+}
