--- a/AlumiManagementSystem/WebContent/css/admin/shadeBlock.css
+++ b/AlumiManagementSystem/WebContent/css/admin/shadeBlock.css
@@ -222,3 +222,23 @@ body {
     line-height: 70px;
     font-size: 18px;
 }
+.resume_bottom{
+	border-bottom: 1px solid #96AECD;
+	padding-bottom: 10px;
+	text-align: center;
+}
+.resume_title{
+	text-align: center;
+	font-size: 16px;
+	padding-bottom: 5px;
+}
+.resume_span{
+	margin-left: 10px;	
+}
+.reusume_button{
+	width: 140px;
+	border: 1px solid black;
+	background: white;
+	height: 25px;
+	cursor: pointer;
+}
